--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,11 @@
 name: ci
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - "main"
+    tags:
+      - "v*.*.*"
 
 jobs:
   main:
@@ -19,9 +22,15 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         id: docker_build
+        if: ${{ github.ref_name == 'main' }}
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: islishude/web3-cli:latest
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: Build and push
+        id: docker_build_with_tag
+        if: ${{ github.ref_name != 'main' }}
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: islishude/web3-cli:latest,islishude/web3-cli:${{ github.ref_name }}
