--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,14 +22,14 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         id: docker_build
-        if: ${{ github.ref_name == 'main' }}
+        if: ${{ github.ref_type == 'branch' }}
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: islishude/web3-cli:latest
-      - name: Build and push
+      - name: Build with tag and push
         id: docker_build_with_tag
-        if: ${{ github.ref_name != 'main' }}
+        if: ${{ github.ref_type == 'tag' }}
         uses: docker/build-push-action@v2
         with:
           push: true
