--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,11 +28,14 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: islishude/web3-cli:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       - name: Build with tag and push
         id: docker_build_with_tag
         if: ${{ github.ref_type == 'tag' }}
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: islishude/web3-cli:latest,islishude/web3-cli:${{ github.ref_name }}
+          tags: islishude/web3-cli:${{ github.ref_name }}
