--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,6 +48,9 @@ jobs:
           labels: ${{ steps.docker-meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          sbom: true
+          provenance: true
+          platforms: linux/amd64,linux/arm64
       - name: Sign the published Docker image
         if: ${{ github.event_name != 'pull_request' }}
         env:
