--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
-      - run: go build
-      - run: go test
+      - run: go build -v
+      - run: go test -v ./...
