--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Install cosign
-        if: github.event_name != 'pull_request'
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
         uses: sigstore/cosign-installer@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -52,7 +52,7 @@ jobs:
           provenance: true
           platforms: linux/amd64,linux/arm64
       - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
+        if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
         env:
           TAGS: ${{ steps.docker-meta.outputs.tags }}
           DIGEST: ${{ steps.docker-build.outputs.digest }}
