--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,5 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
-      - run: go build -v
+        with:
+          go-version: "1.21"
+      - run: go build
       - run: go test -v ./...
