--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,10 @@ name: release
 
 on:
   push:
+    branches:
+      - main
     tags:
-      - "*"
+      - "v[0-9]+.[0-9]+.[0-9]+*"
 
 jobs:
   release:
@@ -13,15 +15,21 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: setup go
+      - name: Setup go
         uses: actions/setup-go@v4
         with:
           go-version: "1.21"
-      - name: Run GoReleaser
+      - name: Run Release
         uses: goreleaser/goreleaser-action@v5
         with:
           distribution: goreleaser
           version: latest
-          args: release --clean
+          args: ${{ env.IS_TAG_PUSH == 'true' && 'release --clean' || 'release --clean --snapshot' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          IS_TAG_PUSH: ${{ github.event_name == 'push' && contains(github.ref, 'refs/tags/') }}
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build
+          path: dist/*
