--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: "1.21"
+          check-latest: true
       - run: go build
       - run: go test -v ./...
         env:
