--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,7 +50,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           sbom: true
-          provenance: true
+          provenance: false
           platforms: linux/amd64,linux/arm64
       - name: Sign the published Docker image
         if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
