--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,7 +49,7 @@ jobs:
           annotations: ${{ steps.docker-meta.outputs.annotations }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          sbom: true
+          sbom: false
           provenance: false
           platforms: linux/amd64,linux/arm64
       - name: Sign the published Docker image
