--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,9 +51,9 @@ jobs:
           sbom: false
           annotations: ${{ steps.meta.outputs.annotations }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=buildkit-${{ matrix.os }}
-          cache-to: type=gha,mode=max,scope=buildkit-${{ matrix.os }}
-          outputs: type=registry,"name=${{ env.GHCR_REPO }}",push-by-digest=true,name-canonical=true
+          cache-from: type=gha,scope=buildkit-${{ runner.os }}-${{ runner.arch }}
+          cache-to: type=gha,mode=max,scope=buildkit-${{ runner.os }}-${{ runner.arch }}
+          outputs: type=image,"name=${{ env.GHCR_REPO }}",push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
         run: |
@@ -64,7 +64,7 @@ jobs:
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
-          name: digests-${{ github.run_id }}-${{ matrix.os }}
+          name: digests-${{ github.run_id }}-${{ runner.os }}-${{ runner.arch }}
           path: ${{ runner.temp }}/digests/*
           if-no-files-found: error
           retention-days: 1
